recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:14: error: ';' expected but ')' found.
    backward(length))
                    ^